Resources/Private/Sass/brofix.scss
/* - - - - - - - - - - - - - - - - - - - - -
Info > Brofix (Broken Link Fixer)
- - - - - - - - - - - - - - - - - - - - - */
.brofix-function-menu {
    margin-bottom: 25px;
    margin-left: 25px;
    margin-top: 0;
    float: left;
}

.brofix-function-menu input {
    margin-left: 5px;
}

.brofix-function-menu div {
    margin-top: 11px;
}

.brofix-check-options {
    float: left;
    display: block;
    margin-top: 0;
    width: 225px;
}

.brofix-check-options div {
    float: left;
}

.brofix-button {
    clear: both;
}

/** mark table row of last checked record */
#brofix-broken-links-table tr.brofix-lastchecked, #brofix-broken-links-table tr.brofix-lastchecked td {
    background-color: var(--typo3-table-row-highlight-bg, #ace9ff);
}
html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked,
html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked td {
    background-color: #22364a;
    color: var(--typo3-text-color, inherit);
}

html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked a,
html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked td a {
    color: inherit;
}

@media (prefers-color-scheme: dark) {
    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked,
    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked td {
        background-color: #22364a;
        color: var(--typo3-text-color, inherit);
    }

    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked a,
    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked td a {
        color: inherit;
    }
}

#brofix-broken-links-table tr td .inline-action {
    margin-top: 5px;
    border-top: 2px solid white;
    visibility: hidden;
    padding: 5px;
    vertical-align: bottom;
}
#brofix-broken-links-table tr td .inline-action a {
    text-decoration: underline;
}
#brofix-broken-links-table tr:hover td .inline-action {
    visibility: visible;
}

#brofix-broken-links-table {
    table-layout: fixed;
}

#brofix-broken-links-table td {
    border-left: 1px solid white;
    word-break: break-word;
    padding:10px;
}

#brofix-broken-links-table tbody tr td {
    vertical-align: top;
}

#brofix-broken-links-table td span.valid {
    color: green;
}

#brofix-broken-links-table td span.error {
    color: red;
}

#brofix-broken-links-table td span.status-cannot-check {
    color: orange;
}

#brofix-broken-links-table td:first-child {
    border-left: none;
}

#brofix-broken-links-table td span.freshness_stale {
    color: white;
    background-color: #c83c3c;
}

#uid_searchFilter {
    width: 3em;
}

form div.form-group-border {
    border: 1px dotted rgb(204, 204, 204);
    padding: 10px;
    margin-left: 0px;
}

/** --- for small screens --- */

@media screen and (max-width:920px) {
    #brofix-broken-links-table {
        word-wrap:break-word;
    }
    #brofix-broken-links-table thead {
        display:none
    }
    #brofix-broken-links-table td {
        display:block;
        float:left;/* ie9 and under hack */
        width:100%;
        clear:both;
        background:#f5f5f5;
        -moz-box-sizing:border-box;
        -webkit-box-sizing:border-box;
        box-sizing:border-box;
    }
    #brofix-broken-links-table tbody, #brofix-broken-links-table tr {
        display:block
    }
    #brofix-broken-links-table td:before {
        content:attr(data-th);
        display:block;
        font-weight:bold;
        margin:0 0 2px;
        color:#000;
    }
    #brofix-broken-links-table tbody tr {
        float:left;width:100%;
        padding: 10px;
        margin-bottom:20px;
        border:2px solid #ccc;
    }
}

/** remove optional columns */
#brofix-broken-links-table.view_table_min tr td.mobile-optional,#brofix-broken-links-table.view_table_min tr th.mobile-optional {
    display: none;
}

